--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,6 @@ Flask_Bcrypt==1.0.1
 Flask_Cors==4.0.0
 numpy==1.26.4
 pymongo==4.6.1
-gunicorn
-tensorflow-cpu
+gunicorn==21.2.0
+tensorflow
+Werkzeug==3.0.1
